k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valentine
  namespace: valentine
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - valentine.cloud.k8s.slick.ge
      secretName: valentine-tls-secret
  rules:
    - host: valentine.cloud.k8s.slick.ge
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: valentine
                port:
                  number: 80
